--- a/OnlineStore/Views/Shared/_Layout.cshtml
+++ b/OnlineStore/Views/Shared/_Layout.cshtml
@@ -13,15 +13,17 @@
 <body>
     <header class="container">
         <nav class="navbar navbar-dark bg-dark navbar-expand-md">
-            <h1 class="navbar-brand"><i class="fa fa-leaf"></i> Bine ai venit</h1>
+            <a asp-controller="App" asp-action="Index">
+                <h1 class="navbar-brand"><i class="fa fa-leaf"></i> Bine ai venit</h1>
+            </a>
             <button class="navbar-toggler" data-toggle="collapse" data-target="#theMenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div id="theMenu" class="navbar-collapse collapse">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" asp-controller="App" asp-action="Index">Acasa</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" asp-controller="App" asp-action="Contact">Contact</a>
                     </li>
