--- a/OnlineStore/Views/Shared/_Layout.cshtml
+++ b/OnlineStore/Views/Shared/_Layout.cshtml
@@ -10,9 +10,9 @@
     <link href="~/node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
     <link href="~/css/site.css" rel="stylesheet" />
 </head>
-<body>
+<body style="background-color: #eff5f5">
     <header class="container">
-        <nav class="navbar navbar-dark bg-dark navbar-expand-md">
+        <nav class="navbar navbar-dark bg-dark navbar-expand-md" style="margin-top: 10px; background-color: #333333">
             <a asp-controller="App" asp-action="Index">
                 <h1 class="navbar-brand"><i class="fa fa-leaf"></i> Bine ai venit</h1>
             </a>
