--- a/OnlineStore/ClientApp/app/shop/shop.component.html
+++ b/OnlineStore/ClientApp/app/shop/shop.component.html
@@ -3,9 +3,61 @@
         <h3>{{title}}</h3>
         <product-list></product-list>
     </div>
+
     <div class="col-md-3">
+      
+        <div title="Adauga un nou produs" class="z_button" data-toggle="modal" data-target="#exampleModalCenter">
+            <div class="z_plus">+</div>
+        </div>
+
         <div class="card bg-light p-2">
             <the-cart></the-cart>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">Adauga un produs nou</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body">
+                <form [formGroup]="formAddProduct">
+                    <div class="input-group mb-3">
+                        <input type="text" formControlName="name" class="form-control" placeholder="Numele produsului">
+                    </div>
+
+                    <div class="input-group mb-3">
+                        <input type="number" formControlName="price" class="form-control" placeholder="Pretul produsului">
+                        <div class="input-group-append">
+                            <span class="input-group-text">LEI</span>
+                        </div>
+                    </div>
+
+                    <div class="input-group mb-3">
+                        <textarea class="form-control" formControlName="description" rows="5" placeholder="Descrierea produsului"></textarea>
+                    </div>
+
+                    <div class="input-group">
+                        <div class="custom-file">
+                            <input type="file" formControlName="image" class="custom-file-input" id="importFile" (change)="onFileChange($event)">
+                            <label class="custom-file-label" #labelImport for="importFile">Adauga o imagine pentru noul produs</label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Renunta</button>
+                <button type="button" class="btn btn-success" (click)="onSave()">Salveaza</button>
+            </div>
+
         </div>
     </div>
 </div>
