--- a/OnlineStore/Views/Account/Login.cshtml
+++ b/OnlineStore/Views/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model LoginViewModel
+﻿@model AuthenticationViewModel
 @{
     ViewBag.Title = "Autentificare";
 }
@@ -12,21 +12,21 @@
             <form method="post">
                 <div asp-validation-summary="ModelOnly"></div>
                 <div class="form-group">
-                    <label asp-for="Username">Nume utizator</label>
-                    <input asp-for="Username" class="form-control" />
-                    <span asp-validation-for="Username" class="text-error"></span>
+                    <label asp-for="LoginModel.Username">Nume utizator</label>
+                    <input asp-for="LoginModel.Username" class="form-control" />
+                    <span asp-validation-for="LoginModel.Username" class="text-error"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Password">Parola</label>
-                    <input asp-for="Password" type="password" class="form-control" />
-                    <span asp-validation-for="Password" class="text-error"></span>
+                    <label asp-for="LoginModel.Password">Parola</label>
+                    <input asp-for="LoginModel.Password" type="password" class="form-control" />
+                    <span asp-validation-for="LoginModel.Password" class="text-error"></span>
                 </div>
                 <div class="form-group">
                     <div class="form-check">
-                        <input asp-for="RememberMe" type="checkbox" class="form-check-input" />
-                        <label asp-for="RememberMe" class="form-check-label">Tine-ma minte</label>
+                        <input asp-for="LoginModel.RememberMe" type="checkbox" class="form-check-input" />
+                        <label asp-for="LoginModel.RememberMe" class="form-check-label">Tine-ma minte</label>
                     </div>
-                    <span asp-validation-for="RememberMe" class="text-warning"></span>
+                    <span asp-validation-for="LoginModel.RememberMe" class="text-warning"></span>
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Autentifica-te" class="btn btn-success" />
